--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -67,7 +67,7 @@ year = "Stand 31.05.2015"
   author={Oya, A.},
   howpublished={https://www.google.de/patents/US4643066},
   year={1987},
-  month=feb # "~17",
+  month={Februar~17},
   publisher={Google Patents},
   note={US Patent 4,643,066}
 }
@@ -77,79 +77,51 @@ year = "Stand 31.05.2015"
   author={Rossum, D.P.},
   howpublished={https://www.google.de/patents/US5900570},
   year={1999},
-  month=may # "~4",
+  month={Mai~4},
   publisher={Google Patents},
   note={US Patent 5,900,570}
 }
 
 @Book{lathi,
-	author = "B. P. Lathi",
-	title = "Modern Digital and Analog Communication Systems 3rd ed.",
-	year = "1998",
-	publisher = "Oxford University Press, Inc.",
-	number = "0-19-511009-9"
+	author = {B. P. Lathi},
+	title = {Modern Digital and Analog Communication Systems 3rd ed.},
+	year = {1998},
+	publisher = {Oxford University Press, Inc.},
+	isbn = {0-19-511009-9}
 }
 
 @Book{borucki,
-	author = "Hans Borucki",
-	title = "Einführung in die Akustik - 2., durchges. Aufl.",
-	year = "1980",
-	publisher = "Bibliographisches Institut Mannheim/Wien/Zürich",
-	number = "3-411-01581-0"
+	author = {Hans Borucki},
+	title = {Einführung in die Akustik - 2., durchges. Aufl.},
+	year = {1980},
+	publisher = {Bibliographisches Institut Mannheim/Wien/Zürich},
+	isbn = {3-411-01581-0}
 }
 
 @Book{zwicker,
-	author = "Prof. Dr. Eberhard Zwicker, Prof. Dr. Richard Feldtkeller",
-	title = "Das Ohr als Nachrichtenempfänger - 2. Aufl.",
-	year = "1967",
-	publisher = "S. Hirzel Verlag Stuttgart",
-	number = "978-3777601045"
+	author = {Prof. Dr. Eberhard Zwicker, Prof. Dr. Richard Feldtkeller},
+	title = {Das Ohr als Nachrichtenempfänger - 2. Aufl.},
+	year = {1967},
+	publisher = {S. Hirzel Verlag Stuttgart},
+	isbn = {978-3777601045}
 }
 	
 @Book{raichel,
-	author = "Daniel R. Raichel",
-	title = "The Science and Applications of Acoustics Second Edititon",
-	year = "2006",
-	publisher = "Springer Science",
-	number = "0-387-26062-5"
+	author = {Daniel R. Raichel},
+	title = {The Science and Applications of Acoustics Second Edititon},
+	year = {2006},
+	publisher = {Springer Science},
+	isbn = {0-387-26062-5}
 }
 	
-@Book{abramowitz,
-	author = "Milton Abramowitz and Irene Stegun",
-	title = "Handbook of Mathematical Functions with Formulas, Graphs, and Mathematical Tables",
-	year = "1964",
-	publisher = "Dover Publications",
-	number = "0-486-61272-4"
-}
-
 % http://projecteuclid.org/euclid.bams/1183492347
 @Article{davis,
-	author = "Davis, H. T.; Kirkham, W. J.",
+	author = {Davis, H. T.; Kirkham, W. J.},
 	title = {A new table of the zeros of the Bessel functions {$J_0(x)$} and {$J_1(x)$} with corresponding values of {$J_1(x)$} and {$J_0(x)$}},
-	journal = "Bull. Amer. Math. Soc. 33 (1927), no. 6",
-	pages = "760--772",
-	year = "1927",
-	note = "{http://projecteuclid.org/euclid.bams/1183492347}"
-}
-
- @article{schottstaedt,
-     title = {The Simulation of Natural Instrument Tones using Frequency Modulation with a Complex Modulating 
-Wave},
-     author = {Schottstaedt, B.},
-     journal = {Computer Music Journal},
-     volume = {1},
-     number = {4},
-     pages = {pp. 46-50},
-     url = {http://www.jstor.org/stable/40731300},
-     ISSN = {01489267},
-     year = {1977},
-     publisher = {The MIT Press}
-    }
-
-@Misc{schottiWeb,
-author = {Schottstaedt, B.},
-title = {Introduction to FM},
-howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
+	journal = {Bull. Amer. Math. Soc. 33 (1927), no. 6},
+	pages = {760--772},
+	year = {1927},
+	note = {http://projecteuclid.org/euclid.bams/1183492347}
 }
 
 %Gary
@@ -172,32 +144,31 @@ howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
 
 %Matze=======================================================
 
-%@article{schottstaedt,
-%title = {The Simulation of Natural Instrument Tones using Frequency Modulation with a Complex Modulating 
-%Wave},
-%author = {Schottstaedt, B.},
-%journal = {Computer Music Journal},
-%volume = {1},
-%number = {4},
-%pages = {pp. 46-50},
-%url = {http://www.jstor.org/stable/40731300},
-%ISSN = {01489267},
-%year = {1977},
-%publisher = {The MIT Press}
-%}
+@article{schottstaedt,
+	title = {The Simulation of Natural Instrument Tones using Frequency Modulation with a Complex Modulating Wave},
+	author = {Schottstaedt, B.},
+	journal = {Computer Music Journal},
+	volume = {1},
+	number = {4},
+	pages = {pp. 46-50},
+	url = {http://www.jstor.org/stable/40731300},
+	ISSN = {01489267},
+	year = {1977},
+	publisher = {The MIT Press}
+}
 
-%@Misc{schottiWeb,
-%author = {Schottstaedt, B.},
-%title = {Introduction to FM},
-%howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
-%}
+@Misc{schottiWeb,
+	author = {Schottstaedt, B.},
+	title = {Introduction to FM},
+	howpublished = {https://ccrma.stanford.edu/software/snd/snd/fm.html}
+}
 
-%@book{abramowitz,
-  %title={Handbook of Mathematical Functions: With Formulas, Graphs, and Mathematical Tables},
-  %author={Abramowitz, M. and Stegun, I.A.},
-  %isbn={0-486-61272-4},
-  %series={Applied mathematics series},
-  %url={http://people.math.sfu.ca/~cbm/aands/frameindex.htm},
-  %year={1964},
-  %publisher={Dover Publications}
-%}
+@book{abramowitz,
+  title={Handbook of Mathematical Functions: With Formulas, Graphs, and Mathematical Tables},
+  author={Abramowitz, M. and Stegun, I.A.},
+  isbn={0-486-61272-4},
+  series={Applied mathematics series},
+  url={http://people.math.sfu.ca/~cbm/aands/frameindex.htm},
+  year={1964},
+  publisher={Dover Publications}
+}
